# CurrencyConverterProject

./: ILS_to_EUR.py  coins.py  first.py  my_main.py  pyproject.toml  results.txt
tests/: my_test.py
