[tool.poetry]
name = "firstpoetrypythonproject"
version = "0.1.0"
description = ""
authors = ["TamarFeredee <tamar8689@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.31.0"
item = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
